# okgv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  candidate.md  log.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: architecture.md  commands.md  patterns.md  principles.md  review.md  schema.md
example/: README.md  generation-guide.md  quickstart.txt  schema.py
example/config/: schema.py  structure.json
example/prompts/: reviewer-prompt.md  schema-guide.md  structure-prompt.md
examples/: requirements.txt  viz.py
examples/classification/: README.md  chat.txt  dataset.jsonl
examples/classification/config/: schema.py  structure.json
examples/classification/prompts/: reviewer-prompt.md  schema-guide.md  structure-prompt.md
examples/function-calling/: README.md  chat.txt  dataset-test.jsonl  dataset-train.jsonl  dataset-val.jsonl  generation-guide.md
examples/function-calling/config/: structure.json  validators.py
examples/paraphrase/: generation-guide.md
examples/paraphrase/config/: structure.json
examples/qa/: generation-guide.md
examples/qa/config/: schema.py
examples/rag/: README.md  chat.txt  dataset.jsonl
examples/rag/config/: structure.json
neo4j/: upload_existing_to_neo4j.py
okgv/: __init__.py  config.py  connections.py  core.py  db.py  embedding.py  errors.py  hashing.py  helpers.py  main.py  protocols.py  session.py  specs.py  tui.py  validators.py
okgv/commands/: __init__.py  entries.py  lifecycle.py  maintenance.py  prompts.py  review.py  structure.py
okgv/graph/: __init__.py  client.py  sqlite_client.py
okgv/neo4j/: neo4j_utils.py  upload_to_neo4j.py
okgv/schemas/: qa.py
okgv/templates/: cli-prompt.md  env.txt  generation-guide.md  prompt.md  reviewer-prompt.md  schema-guide.md  schema.py.txt  structure-prompt.md  structure.json
okgv/templates/classification/: env.txt  generation-guide.md
okgv/templates/default/: schema.py.txt
okgv/templates/function-calling/: env.txt  generation-guide.md  schema.py.txt
okgv/templates/paraphrase/: env.txt  schema.py.txt
okgv/templates/qa/: env.txt  structure.json
okgv/templates/rag/: env.txt  generation-guide.md  schema.py.txt
okgv/vector/: __init__.py  client.py  sqlite_client.py
okgv/weaviate/: upload_to_weaviate.py  weaviate_utils.py
tests/: conftest.py  test_cli.py  test_core.py  test_protocols.py
tests/integration/: conftest.py  test_e2e.py  test_graph.py  test_vector.py
tests/unit/: conftest.py  test_cli.py  test_core.py  test_embedding.py  test_entry_prompt.py  test_example_schema.py  test_lifecycle.py  test_protocols.py  test_schema.py  test_specs.py  test_templates.py  test_topic_enforcement.py  test_undo_view.py  test_validator_loading.py  test_validators.py
weaviate/: id_retrieval.py  upload_existing_to_weaviate.py
