[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "okgv"
version = "0.1.0"
description = "Organizing knowledge: graphs and vectors"
requires-python = ">=3.11"
dependencies = [
    "click",
    "neo4j",
    "weaviate-client",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
okgv = "okgv.main:cli"

[tool.setuptools.packages.find]
include = ["okgv*"]
