[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "okgv"
version = "0.1.0"
description = "An agent-native CLI for building balanced, duplicate-free synthetic datasets."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Andrea Zoccatelli", email = "a.zoccatelli.work@gmail.com"}]
requires-python = ">=3.11"
keywords = ["knowledge-base", "vector-search", "sqlite", "semantic-deduplication", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "sqlite-vec>=0.1.6",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
tui = ["textual>=1.0"]
dev = ["pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/AndreaZoccatelli/okgv"
Repository = "https://github.com/AndreaZoccatelli/okgv"
"Bug Tracker" = "https://github.com/AndreaZoccatelli/okgv/issues"

[project.scripts]
okgv = "okgv.main:cli"

[tool.setuptools.packages.find]
include = ["okgv*"]

[tool.setuptools.package-data]
okgv = [
    "py.typed",
    "templates/*.md",
    "templates/*.txt",
    "templates/*.json",
    "templates/*/*.md",
    "templates/*/*.txt",
    "templates/*/*.json",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring real DB connections (SQLite + sqlite-vec)",
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["okgv"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
